2025-04-21T00:56:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14565052841 # 620
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-21
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 508 901 / 523 916
* notice: next accum: outdated-unq outdated-all / unq all: 509 902 / 524 917
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-06] / [2025-04-20]

2025-04-20T00:57:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14554463443 # 619
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-20
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 507 900 / 521 914
* notice: next accum: outdated-unq outdated-all / unq all: 508 901 / 523 916
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-04-05] / [2025-04-19]

2025-04-18T00:52:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14527469235 # 617
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-18
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 505 898 / 520 913
* notice: next accum: outdated-unq outdated-all / unq all: 507 900 / 521 914
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-03] / [2025-04-17]

2025-04-17T00:52:36Z: