@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-21T00:56:02Z",
-  "count_outdated" : 902,
-  "uniques_outdated" : 509,
-  "count" : 917,
-  "uniques" : 524,
+  "timestamp" : "2025-04-22T00:53:23Z",
+  "count_outdated" : 903,
+  "uniques_outdated" : 510,
+  "count" : 918,
+  "uniques" : 525,
   "clones" : [
-    {
-      "timestamp": "2025-04-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-08T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-04-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
