@@ -1,3 +1,12 @@
+2025-04-22T00:53:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14584296104 # 621
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-22
+* notice: last 14d: unq all: 4 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 509 902 / 524 917
+* notice: next accum: outdated-unq outdated-all / unq all: 510 903 / 525 918
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-04-07] / [2025-04-21]
+
 2025-04-21T00:56:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14565052841 # 620
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-21
